--- a/src/app/red-dividers.css
+++ b/src/app/red-dividers.css
@@ -1,19 +1,19 @@
 /* Red Section Dividers - Add this to any component that needs red section breaks */
 .section-divider-red {
-    border-color: #8B1E1A;
+    border-color: #d0302b;
 }
 
 .border-red-school {
-    border-color: #8B1E1A !important;
+    border-color: #d0302b !important;
 }
 
 .divide-red-school>*+* {
-    border-color: #8B1E1A !important;
+    border-color: #d0302b !important;
 }
 
 /* Utility class for red horizontal rules */
 hr.red-divider {
-    border-color: #8B1E1A;
+    border-color: #d0302b;
     border-width: 2px;
     opacity: 0.8;
 }
